posting to the controller

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,8 @@
-<h1>User task management portal</h1>
-<p>Welcome to the user task management portal</p>
+<div class="container-fluid">
+  <div class="container-md">
+    <app-task-group></app-task-group>
+  </div>
+  <div class="container-md">
+    <user></user>
+  </div>
+</div>
