posting to the controller

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,8 +1,13 @@
 <div class="container-fluid">
-  <div class="container-md">
-    <app-task-group></app-task-group>
-  </div>
-  <div class="container-md">
-    <user></user>
+  <div class="row mb-3">
+    <div class="col-lg-4 themed-grid-col">
+      <app-task-group></app-task-group>
+    </div>
+    <div class="col-lg-4 themed-grid-col">
+      <app-user-task></app-user-task>
+    </div>
+    <div class="col-lg-4 themed-grid-col">
+      <app-user></app-user>
+    </div>
   </div>
 </div>
