--- a/ClientApp/src/app/task-group/task-group.component.html
+++ b/ClientApp/src/app/task-group/task-group.component.html
@@ -9,12 +9,18 @@
     <tr>
       <th>ID</th>
       <th>Name</th>
+      <th>User Tasks</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let taskGroup of taskGroups">
       <td>{{ taskGroup.id }}</td>
       <td>{{ taskGroup.name }}</td>
+      <td>
+        <p *ngFor="let userTask of taskGroup.userTasks">
+          {{ userTask }}
+        </p>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -24,17 +30,18 @@
     <label for="name">
       Name
     </label>
-    <input id="name" type="text" formControlName="name">
+    <input class="float-right" id="name" type="text" formControlName="name">
   </div>
   <div>
     <label for="userTask">
-      User Task
+      User Tasks
     </label>
-    <select multiple formControlName="userTasks">
+    <select class="float-right" multiple formControlName="userTasks">
       <option *ngFor="let userTask of userTasks" [ngValue]="userTask">
         {{ userTask.name }}
       </option>
     </select>
   </div>
-  <button class="button" type="submit">Save</button>
+  <br />
+  <button class="button float-right" type="submit">Save</button>
 </form>
