--- a/ClientApp/src/app/user/user.component.html
+++ b/ClientApp/src/app/user/user.component.html
@@ -26,13 +26,13 @@
     <label for="firstName">
       Firstname
     </label>
-    <input id="firstName" type="text" formControlName="firstName">
+    <input class="float-right" id="firstName" type="text" formControlName="firstName">
   </div>
   <div>
     <label for="lastName">
       Lastname
     </label>
-    <input id="lastName" type="text" formControlName="lastName">
+    <input class="float-right" id="lastName" type="text" formControlName="lastName">
   </div>
-  <button class="button" type="submit">Save</button>
+  <button class="button float-right" type="submit">Save</button>
 </form>
