--- a/ClientApp/src/app/user/user.component.html
+++ b/ClientApp/src/app/user/user.component.html
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let user of users">
-      <td>{{ user.id }}</td>
+      <td>{{ user.userId }}</td>
       <td>{{ user.firstName }}</td>
       <td>{{ user.lastName }}</td>
       <td>
