Dependency Injection and Database

--- a/ClientApp/src/app/task-group/task-group.component.html
+++ b/ClientApp/src/app/task-group/task-group.component.html
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let taskGroup of taskGroups">
-      <td>{{ taskGroup.id }}</td>
+      <td>{{ taskGroup.taskId }}</td>
       <td>{{ taskGroup.name }}</td>
       <td>
         <p *ngFor="let userTask of taskGroup.userTasks">
