--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,12 +1,14 @@
 <div class="container-fluid">
-  <div class="row mb-3">
-    <div class="col-lg-4 themed-grid-col">
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
       <app-task-group></app-task-group>
     </div>
-    <div class="col-lg-4 themed-grid-col">
+    <div class="col-sm-12 col-md-6">
       <app-user-task></app-user-task>
     </div>
-    <div class="col-lg-4 themed-grid-col">
+  </div>
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
       <app-user></app-user>
     </div>
   </div>
