--- a/ClientApp/src/app/task-group/task-group.component.html
+++ b/ClientApp/src/app/task-group/task-group.component.html
@@ -35,7 +35,7 @@
     </label>
     <input class="float-right" id="name" type="text" formControlName="name">
   </div>
-  <div>
+  <div class="form-size">
     <label for="userTask">
       User Tasks
     </label>
@@ -45,7 +45,5 @@
       </option>
     </select>
   </div>
-  <div>
     <button class="button float-right" type="submit">Save</button>
-  </div>
 </form>
