--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,6 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-11">
+    <div class="col-sm-12">
+        <button class="button float-right" type="submit" (click)="orderByName()">Order By Name</button>
+        <button class="button float-right" type="submit" (click)="orderByTaskCount()">Order By Task Count</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
       <h1 id="tableLabel">Task Groups</h1>
 
       <p *ngIf="!taskGroups"><em>Loading...</em></p>
@@ -28,29 +34,11 @@
                 {{ taskGroup.userTasks.length }}
             </td>
             <td>
-              <button class="button float-right" type="button" (click)="edit(taskGroup)">Edit</button>
-              <button class="button float-right" type="button" (click)="delete(taskGroup)">Delete</button>
+              <button class="button float-right" type="button" (click)="edit()">Edit</button>
             </td>
           </tr>
         </tbody>
       </table>
-    </div>
-    <div class="col-sm-1">
-      <button class="button float-right" type="submit" (click)="orderByName()">Order By Name</button>
-      <button class="button float-right" type="submit" (click)="orderByTaskCount()">Order By Task Count</button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <app-task-group></app-task-group>
-    </div>
-    <div class="col-sm-12 col-md-6">
-      <app-user-task></app-user-task>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <app-user></app-user>
     </div>
   </div>
 </div>
