--- a/ClientApp/src/app/task-group/task-group.component.html
+++ b/ClientApp/src/app/task-group/task-group.component.html
@@ -1,49 +1,57 @@
-<h1 id="tableLabel">Task Groups</h1>
-
-<p *ngIf="!taskGroups"><em>Loading...</em></p>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="taskGroups">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>User Tasks</th>
-      <th>&nbsp;</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let taskGroup of taskGroups">
-      <td>{{ taskGroup.taskGroupId }}</td>
-      <td>{{ taskGroup.name }}</td>
-      <td>
-        <p *ngFor="let userTask of taskGroup.userTasks">
-          {{ userTask.name }}
-        </p>
-      </td>
-      <td>
-        <button class="button float-right" type="button" (click)="edit(taskGroup)">Edit</button>
-        <button class="button float-right" type="button" (click)="delete(taskGroup)">Delete</button>
-      </td> 
-    </tr>    
-  </tbody>
-</table>
-
-<form [formGroup]="taskGroupForm" (ngSubmit)="onSubmit(taskGroupForm.value)">
-  <div>
-    <label for="name">
-      Name
-    </label>
-    <input class="float-right" id="name" type="text" formControlName="name">
+<div class="row">
+  <div class="col-sm-12 col-md-6">
+    <h1 id="tableLabel">Task Groups</h1>
   </div>
-  <div class="form-size">
-    <label for="userTask">
-      User Tasks
-    </label>
-    <select class="float-right" multiple formControlName="userTasks" [compareWith]="CompareUserTask">
-      <option *ngFor="let userTask of userTasks" [ngValue]="userTask">
-        {{ userTask.name }}
-      </option>
-    </select>
+</div>
+<div class="row">
+  <div class="col-sm-12 col-md-6">
+    <p *ngIf="!taskGroups"><em>Loading...</em></p>
+
+    <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="taskGroups">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>User Tasks</th>
+          <th>&nbsp;</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let taskGroup of taskGroups">
+          <td>{{ taskGroup.taskGroupId }}</td>
+          <td>{{ taskGroup.name }}</td>
+          <td>
+            <p *ngFor="let userTask of taskGroup.userTasks">
+              {{ userTask.name }}
+            </p>
+          </td>
+          <td>
+            <button class="button float-right" type="button" (click)="edit(taskGroup)">Edit</button>
+            <button class="button float-right" type="button" (click)="delete(taskGroup)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-    <button class="button float-right" type="submit">Save</button>
-</form>
+  <div class="col-sm-12 col-md-6">
+    <form [formGroup]="taskGroupForm" (ngSubmit)="onSubmit(taskGroupForm.value)">
+      <div>
+        <label for="name">
+          Name
+        </label>
+        <input class="float-right" id="name" type="text" formControlName="name">
+      </div>
+      <div class="form-size">
+        <label for="userTask">
+          User Tasks
+        </label>
+        <select class="float-right" multiple formControlName="userTasks" [compareWith]="CompareUserTask">
+          <option *ngFor="let userTask of userTasks" [ngValue]="userTask">
+            {{ userTask.name }}
+          </option>
+        </select>
+      </div>
+      <button class="button float-right" type="submit">Save</button>
+    </form>
+  </div>
+</div>
