--- a/ClientApp/src/app/task-group/task-group.component.html
+++ b/ClientApp/src/app/task-group/task-group.component.html
@@ -51,7 +51,10 @@
           </option>
         </select>
       </div>
-      <button class="button float-right" type="submit">Save</button>
+      <div class="float-right">
+        <button class="button" type="button" (click)="clear()">Clear</button>
+        <button class="button" type="submit">Save</button>
+      </div>
     </form>
   </div>
 </div>
