--- a/ClientApp/src/app/edit/edit.component.html
+++ b/ClientApp/src/app/edit/edit.component.html
@@ -1,6 +1,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
+      <button class="button float-right" type="button" (click)="refresh()">Refresh</button>
+    </div>
+  </div><div class="row">
+    <div class="col-12">
       <app-task-group></app-task-group>
     </div>
   </div>
