--- a/ClientApp/src/app/edit/edit.component.html
+++ b/ClientApp/src/app/edit/edit.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
+      <p>To add a new item you need to clear the form and then save.<br /> To edit an item you need to click edit then save.<br /> To delete and item you click delete.</p>
       <button class="button float-right" type="button" (click)="refresh()">Refresh</button>
     </div>
   </div><div class="row">
